Bug 1489139 - Ensure unbound generated content doesn't remain in the active chain. r=smaug

This reuses the same code path that was added in bug 1461299 for NAC, but for
generated content as well. DestroyAnonymousContent notifies to the ESM.

Also, remove the NativeAnonymousContentRemoved bit about <svg:use> since it's no
longer NAC.

Differential Revision: https://phabricator.services.mozilla.com/D5575